crates/biome_cli/tests/snapshots/main_commands_inspect_config/absent_child_of_override_scalar_has_no_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["**/*.js"],
      "formatter": { "lineWidth": 120 }
    }
  ]
}
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.lineWidth.extra doesn't exist.
  
  i Make sure it's correctly spelled.
  

```
