crates/biome_cli/tests/snapshots/main_commands_inspect_config/absent_key_is_successful.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter.unknown
```

## `biome.json`

```json
{ "formatter": { "lineWidth": 100 } }
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.unknown doesn't exist.
  
  i Make sure it's correctly spelled.
  

```
