crates/biome_cli/tests/snapshots/main_commands_inspect_config/identical_composite_declarations_report_the_last_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter
```

## `biome.json`

```json
{
  "extends": ["base.json"],
  "formatter": { "lineWidth": 100 }
}
```

## `base.json`

```json
{ "formatter": { "lineWidth": 100 } }
```

# Emitted Messages

```block
biome.json:3:16 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter has the following value.
  
    1 │ {
    2 │   "extends": ["base.json"],
  > 3 │   "formatter": { "lineWidth": 100 }
      │                ^^^^^^^^^^^^^^^^^^^^
    4 │ }
  
  i This value is provided by the root configuration.
  

```
