crates/biome_cli/tests/snapshots/main_commands_inspect_config/identical_override_composite_reports_the_override_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter --path=file.js
```

## `biome.json`

```json
{
  "formatter": { "lineWidth": 100 },
  "overrides": [
    {
      "includes": ["**/*.js"],
      "formatter": { "lineWidth": 100 }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:6:20 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter has the following value.
  
    4 │     {
    5 │       "includes": ["**/*.js"],
  > 6 │       "formatter": { "lineWidth": 100 }
      │                    ^^^^^^^^^^^^^^^^^^^^
    7 │     }
    8 │   ]
  
  i This value is provided by override 0 in the root configuration.
  
  i The override matched file.js using **/*.js.
  

```
