crates/biome_cli/tests/snapshots/main_commands_inspect_config/indexed_extended_array_value_uses_local_source_index.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config files.includes.1
```

## `biome.json`

```json
{
  "extends": ["base.json"],
  "files": { "includes": ["tests/**"] }
}
```

## `base.json`

```json
{ "files": { "includes": ["src/**"] } }
```

# Emitted Messages

```block
biome.json:3:27 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key files.includes.1 has the following value.
  
    1 │ {
    2 │   "extends": ["base.json"],
  > 3 │   "files": { "includes": ["tests/**"] }
      │                           ^^^^^^^^^^
    4 │ }
  
  i This value is provided by the root configuration.
  

```
